[gd_scene load_steps=5 format=3 uid="uid://pnvhmy52gx8a"]

[ext_resource type="Texture2D" uid="uid://flk2a1mm6id2" path="res://textures/firstSceneBG.png" id="2_cfmv5"]
[ext_resource type="Script" path="res://scenes/startandexitbtn.gd" id="2_dh2rn"]

[sub_resource type="Theme" id="Theme_jiug2"]
default_font_size = 50

[sub_resource type="Theme" id="Theme_h8wrg"]
default_font_size = 50

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 384)
scale = Vector2(3.6, 2.4)
texture = ExtResource("2_cfmv5")

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -78.0
offset_right = 64.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jiug2")
action_mode = 0
text = "Start"
flat = true
script = ExtResource("2_dh2rn")

[node name="Underline" type="Panel" parent="StartButton"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 25.5
offset_right = 120.0
offset_bottom = 26.5

[node name="ExitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_right = 49.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_h8wrg")
action_mode = 0
text = "Exit"
flat = true
script = ExtResource("2_dh2rn")

[node name="Underline" type="Panel" parent="ExitButton"]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 64.0
offset_right = 96.0
offset_bottom = 65.0

[connection signal="mouse_entered" from="StartButton" to="StartButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="StartButton" to="StartButton" method="_on_mouse_exited"]
[connection signal="pressed" from="StartButton" to="StartButton" method="_on_start_pressed"]
[connection signal="mouse_entered" from="ExitButton" to="ExitButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ExitButton" to="ExitButton" method="_on_mouse_exited"]
[connection signal="pressed" from="ExitButton" to="ExitButton" method="_on_exit_pressed"]
